# solana-contest-platform

./: Anchor.toml  README.md
app/: README.md  package.json  pnpm-lock.yaml
app/app/: globals.css  layout.tsx  page.tsx
app/app/components/: Nav.tsx  WalletButton.tsx
app/app/contests/: page.tsx
app/app/contests/[id]/: page.tsx
app/app/contests/create/: page.tsx
app/app/lib/: program.ts  solarena.json  types.ts
app/app/providers/: SolanaProvider.tsx
docs/: architecture-diagrams.md
programs/solana-contest-platform/: Cargo.toml
programs/solana-contest-platform/src/: errors.rs  lib.rs
programs/solana-contest-platform/src/instructions/: create_contest.rs  distribute_prizes.rs  enable_gas_sponsorship.rs  fund_contest.rs  judge_vote.rs  mod.rs  reclaim_funds.rs  submit_entry.rs  update_submission.rs
programs/solana-contest-platform/src/state/: contest.rs  mod.rs  submission.rs  vote.rs
tests/: solana-contest-platform.ts
